@@ -132,10 +132,6 @@ File::Touch
 
 =item *
 
-HTML::Barcode::QRCode
-
-=item *
-
 HTTP::Tiny
 
 =item *
@@ -212,11 +208,31 @@ Perl::Critic
 
 =item *
 
+PlugAuth
+
+=item *
+
+PlugAuth::Client
+
+=item *
+
 PlugAuth::Client::Tiny
 
 =item *
 
 PlugAuth::Lite
+
+=item *
+
+PlugAuth::Plugin::Audit
+
+=item *
+
+PlugAuth::Plugin::DBIAuth
+
+=item *
+
+PlugAuth::Plugin::LDAP
 
 =item *
 
