@@ -131,16 +131,27 @@ PlugAuth::Lite                                 = 0
 Authen::Simple::PlugAuth                       = 0
 Yars                                           = 0
 
+PlugAuth                                       = 0
+PlugAuth::Client                               = 0
+PlugAuth::Plugin::Audit                        = 0
+PlugAuth::Plugin::DBIAuth                      = 0
+PlugAuth::Plugin::LDAP                         = 0
+
 [Author::Plicease::OSPrereqsNot / MSWin32]
 Clustericious                                  = 0
 Data::Downloader                               = 0
 AnyEvent::Open3::Simple                        = 0
 Sereal::Encoder                                = 0
 Yars                                           = 0
+PlugAuth                                       = 0
+PlugAuth::Plugin::Audit                        = 0
+PlugAuth::Plugin::DBIAuth                      = 0
+PlugAuth::Plugin::LDAP                         = 0
 
 [Author::Plicease::OSPrereqsNot / cygwin]
 Test::Strict                                   = 0
 Data::Downloader                               = 0
+Yars                                           = 0
 
 [Run::BeforeBuild]
 run = tools/podfixup
